--- a/terraform:0.13.7/Dockerfile
+++ b/terraform:0.13.7/Dockerfile
@@ -1,11 +1,8 @@
-FROM oraclelinux:9
+FROM ghcr.io/valengus/terraform:0.13.7
 
-RUN dnf install -y epel-release yum-utils ; \
-    dnf install -y python3 ansible git ; \
+RUN dnf install -y yum-utils ; \
     yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo ; \
     dnf -y install terraform-0.13.7 ; \
     dnf clean all
-
-COPY ansible.cfg /etc/ansible/ansible.cfg
 
 CMD ["/usr/sbin/init"]
