--- a/.github/workflows/jenkins:2.346-1.1.yml
+++ b/.github/workflows/jenkins:2.346-1.1.yml
@@ -1,6 +1,10 @@
 name: build jenkins:2.346-1.1
 
-on: workflow_dispatch
+on:
+  workflow_run:
+    workflows: ["build oraclelinux:8"]
+    types:
+      - completed
 
 jobs:
   build-and-push-image:
