--- a/ansible:5.4.0/Dockerfile
+++ b/ansible:5.4.0/Dockerfile
@@ -1,7 +1,6 @@
 FROM oraclelinux:9
 
-RUN dnf install -y epel-release ; \
-    dnf install -y ansible-5.4.0 git ; \
+RUN dnf install -y ansible-5.4.0 ; \
     dnf clean all
 
 COPY ansible.cfg /etc/ansible/ansible.cfg
