--- a/oraclelinux:8/Dockerfile
+++ b/oraclelinux:8/Dockerfile
@@ -1,7 +1,7 @@
 FROM oraclelinux:8
 
 RUN dnf install -y epel-release ; \
-    dnf install -y tini ; \
+    dnf install -y tini git; \
     dnf clean all
 
 CMD ["/usr/sbin/init"]
