--- a/jenkins:2.346-1.1/Dockerfile
+++ b/jenkins:2.346-1.1/Dockerfile
@@ -11,5 +11,8 @@ RUN dnf install -y java-11-openjdk ; \
     dnf clean all
 
 COPY jenkins.sh /usr/local/bin/jenkins.sh
+RUN chmod ugo+x /usr/local/bin/jenkins.sh
+
+
 
 ENTRYPOINT ["/bin/tini", "--", "/usr/local/bin/jenkins.sh"]
