--- a/.github/workflows/jenkins:2.346-1.1.yml
+++ b/.github/workflows/jenkins:2.346-1.1.yml
@@ -1,8 +1,8 @@
 name: build jenkins:2.346-1.1
 
 on:
-  - workflow_dispatch:
-  - workflow_run:
+  workflow_dispatch:
+  workflow_run:
       workflows: ["build oraclelinux:8"]
       types:
         - completed
