--- a/.github/workflows/jenkins:2.346.2.yml
+++ b/.github/workflows/jenkins:2.346.2.yml
@@ -1,4 +1,4 @@
-name: build jenkins:2.346-1.1
+name: build jenkins:2.346.2
 
 on:
   workflow_dispatch
@@ -24,6 +24,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: ./jenkins:2.346-1.1
+          context: ./jenkins:2.346.2
           push: true
-          tags: ghcr.io/valengus/jenkins:2.346-1.1
+          tags: ghcr.io/valengus/jenkins:2.346.2
