--- a/jenkins:2.346.2/jenkins-config-as-code.yaml
+++ b/jenkins:2.346.2/jenkins-config-as-code.yaml
@@ -1,12 +1,12 @@
 jenkins:
+
+  authorizationStrategy:
+    loggedInUsersCanDoAnything:
+      allowAnonymousRead: false
+
   securityRealm:
     local:
       allowsSignup: false
       users:
         - id: ${ADMIN_USER}
           password: ${ADMIN_PASSWORD}
-  authorizationStrategy: loggedInUsersCanDoAnything
-
-security:
-  globalJobDslSecurityConfiguration:
-    useScriptSecurity: false
