--- a/jenkins:2.346.2/Dockerfile
+++ b/jenkins:2.346.2/Dockerfile
@@ -6,9 +6,9 @@ ENV ADMIN_USER="admin"
 ENV ADMIN_PASSWORD="password"
 
 RUN jenkins-plugin-cli --plugins \
-    configuration-as-code \
-    job-dsl \
-    workflow-aggregator
+    configuration-as-code:1512 \
+    job-dsl:1.81 \
+    workflow-aggregator:590 
     # git:4.8.2 \
     # locale:1.4 \
     # ssh-agent:1.23 \
