--- a/jenkins:2.346.2/Dockerfile
+++ b/jenkins:2.346.2/Dockerfile
@@ -6,19 +6,16 @@ ENV ADMIN_USER="admin"
 ENV ADMIN_PASSWORD="password"
 
 RUN jenkins-plugin-cli --plugins \
-    configuration-as-code:1512 \
-    job-dsl:1.81 \
-    workflow-aggregator:590 
-    # git:4.8.2 \
-    # locale:1.4 \
-    # ssh-agent:1.23 \
-    # ssh-slaves:1.33.0 \
-    # ws-cleanup:0.39 \
-    # docker-plugin:1.2.3 \
-    # docker-workflow:1.26 \
-    # ansible:1.1 \
-    # parameterized-scheduler:1.0 \
-    # git-parameter:0.9.13
+    configuration-as-code \
+    job-dsl \
+    workflow-aggregator \
+    git \
+    locale \
+    ssh-agent \
+    ssh-slaves \
+    ws-cleanup \
+    docker-plugin \
+    docker-workflow
 
 ENV CASC_JENKINS_CONFIG="/usr/local/jenkins-config-as-code.yaml"
 COPY jenkins-config-as-code.yaml /usr/local/jenkins-config-as-code.yaml
