--- a/terraform:0.13.7/Dockerfile
+++ b/terraform:0.13.7/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/valengus/terraform:0.13.7
+FROM ghcr.io/valengus/ansible:5.4.0
 
 RUN dnf install -y yum-utils ; \
     yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo ; \
