--- a/php:8.1/Dockerfile
+++ b/php:8.1/Dockerfile
@@ -1,10 +1,10 @@
 FROM ghcr.io/valengus/oraclelinux:8
 
-RUN dnf install -y https://rpms.remirepo.net/enterprise/remi-release-7.rpm ; \
+RUN dnf install -y https://rpms.remirepo.net/enterprise/remi-release-8.rpm ; \
+    dnf module enable php:remi-8.1 -y ; \
     dnf install -y php php-cli php-mysqlnd \
     php-zip php-devel php-gd php-mbstring php-curl \ 
-    php-xml php-pear php-bcmath php-json \
-    --disablerepo="remi-php*" --enablerepo="remi-php81*" ; \
+    php-xml php-pear php-bcmath php-json ; \
     dnf clean all ; \
     curl -o /usr/src/composer-setup.php https://getcomposer.org/installer ; \
     php /usr/src/composer-setup.php --install-dir=/usr/local/bin --filename=composer
