--- a/ansible:6.2.0/Dockerfile
+++ b/ansible:6.2.0/Dockerfile
@@ -3,7 +3,7 @@ FROM ghcr.io/valengus/oraclelinux:8
 RUN dnf install -y python39 python39-pip git sshpass ; \
     pip3 install pip --upgrade ; \
     python3 -m pip install ansible==6.2.0 ; \
-    ansible-galaxy collection install community.crypto ; \
+    ansible-galaxy collection install community.crypto -p /usr/share/ansible/collections ; \
     dnf clean all
 
 COPY ansible.cfg /etc/ansible/ansible.cfg
