--- a/ansible:6.2.0/Dockerfile
+++ b/ansible:6.2.0/Dockerfile
@@ -1,10 +1,7 @@
 FROM ghcr.io/valengus/python:3.9
 
 
-RUN dnf install -y python39 python39-pip git sshpass ; \
-    pip3 install pip --upgrade ; \
-    python3 -m pip install ansible==6.2.0 ; \
-    python3 -m pip install pywinrm; \
+RUN dnf install ansible sshpass; \
     ansible-galaxy collection install community.crypto -p /usr/share/ansible/collections ; \
     ansible --version ; \
     dnf clean all
