fix ansible image

--- a/ansible:2.7.8/Dockerfile
+++ b/ansible:2.7.8/Dockerfile
@@ -1,10 +1,9 @@
 FROM ghcr.io/valengus/python:3.9
 
 
-RUN dnf install ansible sshpass; \
+RUN pip3 install ansible==2.7.8 ; \
     ansible-galaxy collection install community.crypto -p /usr/share/ansible/collections ; \
-    ansible --version ; \
-    dnf clean all
+    ansible --version
 
 COPY ansible.cfg /etc/ansible/ansible.cfg
 
