--- a/.github/workflows/terraform:0.13.7.yml
+++ b/.github/workflows/terraform:0.13.7.yml
@@ -3,7 +3,7 @@ name: build terraform:0.13.7
 on:
   workflow_dispatch:
   workflow_run:
-      workflows: ["build ansible:2.7.8"]
+      workflows: ["build ansible:latest"]
       types:
         - completed
 
