--- a/oraclelinux-systemd:8/Dockerfile
+++ b/oraclelinux-systemd:8/Dockerfile
@@ -11,8 +11,8 @@ RUN yum reinstall -y systemd && \
     rm -f /lib/systemd/system/basic.target.wants/* && \
     rm -f /lib/systemd/system/anaconda.target.wants/*
 
-RUN yum -y install rpm dnf-plugins-core  && \
-    yum -y config-manager --set-enabled powertools  && \
+RUN yum -y install dnf-plugins-core  && \
+    dnf config-manager --set-enabled ol8_codeready_builder  && \
     yum -y install initscripts sudo which hostname libyaml-devel python3 python3-devel python3-dnf python3-pip python3-pyyaml iproute && \
     yum clean all
 
