--- a/molecule_ansible:2.15.6/Dockerfile
+++ b/molecule_ansible:2.15.6/Dockerfile
@@ -9,6 +9,9 @@ RUN yum install -y python3 python3-pip && \
     pip install yamllint>=1.27.1 && \
     pip install flake8>=5.0.3 && \
     pip install ansible-lint>=6.4.0 && \
+    dnf config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo && \ 
+    dnf install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin && \
+    systemctl enable docker && \
     dnf clean all
 
 COPY ansible.cfg /etc/ansible/ansible.cfg
