--- a/ansible:molecule/Dockerfile
+++ b/ansible:molecule/Dockerfile
@@ -1,10 +1,6 @@
-FROM ghcr.io/valengus/oraclelinux:9
+FROM ghcr.io/valengus/ansible:2.15.6
 
-RUN yum install -y python3 python3-pip && \
-    pip install pip --upgrade && \
-    pip install ansible-core==2.15.6 && \
-    pip install ansible && \
-    pip install molecule>=4.0.0 && \
+RUN pip install molecule>=4.0.0 && \
     pip install molecule-docker>=2.0.0 && \
     pip install yamllint>=1.27.1 && \
     pip install flake8>=5.0.3 && \
@@ -13,7 +9,5 @@ RUN yum install -y python3 python3-pip && \
     dnf install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin && \
     systemctl enable docker && \
     dnf clean all
-
-COPY ansible.cfg /etc/ansible/ansible.cfg
 
 CMD ["/usr/sbin/init"]
