--- a/terraform0.13/Dockerfile
+++ b/terraform0.13/Dockerfile
@@ -1,8 +1,8 @@
-FROM ghcr.io/valengus/ansible:latest
+FROM valengus/ansible2.16
 
 RUN dnf install -y yum-utils ; \
     yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo ; \
-    dnf -y install packer terraform-0.13.7 ; \
+    dnf -y install terraform-0.13.7 ; \
     dnf clean all
 
 CMD ["/usr/sbin/init"]
