--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,10 @@ services:
     environment:
     - DOCKER_TLS_CERTDIR=/certs
 
+  # registry:
+  #   image: registry:2
+  #   ports:
+  #   - 5000:5000
+
 volumes:
   jenkins-docker-certs:
