--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     - DOCKER_TLS_VERIFY=1
     volumes:
     - jenkins-docker-certs:/certs/client:ro
-    - ./jobs/seed/seed.groovy:/var/lib/jenkins/init.groovy.d/seed.groovy
+    - ./jobs/seed.groovy:/var/lib/jenkins/init.groovy.d/seed.groovy
 
   docker:
     container_name: docker
