--- a/ansible/jenkins.yml
+++ b/ansible/jenkins.yml
@@ -125,10 +125,23 @@
       name: 
       - python3
       - python3-pip
-      state: present
 
   - name: Ansible | Install ansible
     ansible.builtin.pip:
       name: 
       - ansible-core>=2.15
       - ansible
+
+
+
+  - name: Trivy | Add Trivy repository
+    ansible.builtin.yum_repository:
+      name: "trivy"
+      description: "Trivy"
+      baseurl: "https://aquasecurity.github.io/trivy-repo/rpm/releases/$releasever/$basearch"
+      state: "present"
+      gpgcheck: false
+
+  - name: Trivy | Install Trivy
+    ansible.builtin.dnf:
+      name: trivy
