--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
   docker-registry:
     container_name: docker-registry
     image: registry:2.7
+    restart: unless-stopped
     ports:
     - 5000:5000
 
